@@ -124,19 +124,24 @@ public class RevisionObservableImpl extends Observable implements RevisionObserv
   /**
    * Update.
    *
-   * @param instanceName The instance name.
-   * @param repository   Repository to use for update.
-   * @param objectCache  ObjectCache instance to read/write information about last observed revisions.
+   * @param instanceName     The instance name.
+   * @param repository       Repository to use for update.
+   * @param objectCache      ObjectCache instance to read/write information about last observed revisions.
+   * @param flushAfterUpdate If <tt>true</tt>, caches will be flushed after update.
    */
-  protected void update(final String instanceName, final SVNRepository repository, final ObjectCache objectCache) {
+  protected void update(final String instanceName, final SVNRepository repository, final ObjectCache objectCache,
+                        final boolean flushAfterUpdate) {
     if (configuration.isConfigured()) {
       updating = true;
 
       try {
         Long lastUpdatedRevision = (Long) objectCache.get(LAST_UPDATED_LOG_REVISION_CACHE_KEY + instanceName);
+        boolean clearCacheBeforeUpdate = false;
+
         if (lastUpdatedRevision == null) {
           logger.info("No record about previously fetched revisions exists - fetching all revisions for instance: "
               + instanceName);
+          clearCacheBeforeUpdate = true;
           lastUpdatedRevision = 0L;
         }
 
@@ -173,7 +178,7 @@ public class RevisionObservableImpl extends Observable implements RevisionObserv
             notification.append(toRevision);
             notification.append("]");
             logger.info(notification.toString());
-            notifyObservers(new RevisionUpdate(instanceName, logEntries));
+            notifyObservers(new RevisionUpdate(instanceName, logEntries, flushAfterUpdate, clearCacheBeforeUpdate));
 
             lastUpdatedRevision = toRevision;
             logger.debug("Updating 'lastUpdatedRevision' to: " + lastUpdatedRevision);
@@ -195,7 +200,7 @@ public class RevisionObservableImpl extends Observable implements RevisionObserv
    *
    * @throws RuntimeException if a subversion error occurs.
    */
-  public synchronized void update(final String instanceName) {
+  public synchronized void update(final String instanceName, final boolean flushAfterUpdate) {
     if (configuration.isConfigured()) {
       final InstanceConfiguration instanceConfiguration = configuration.getInstanceConfiguration(instanceName);
       if (instanceConfiguration.isCacheUsed()) {
@@ -203,7 +208,7 @@ public class RevisionObservableImpl extends Observable implements RevisionObserv
         try {
           repository = RepositoryFactory.INSTANCE.getRepository(instanceConfiguration);
           final ObjectCache objectCache = objectCacheManager.getCache(instanceName);
-          update(instanceConfiguration.getInstanceName(), repository, objectCache);
+          update(instanceConfiguration.getInstanceName(), repository, objectCache, flushAfterUpdate);
         } catch (final Exception ex) {
           logger.warn("Unable to establish repository connection", ex);
         }
@@ -219,7 +224,7 @@ public class RevisionObservableImpl extends Observable implements RevisionObserv
   public synchronized void updateAll() {
     if (configuration.isConfigured() && !isUpdating()) {
       for (final String instanceName : configuration.getInstanceNames()) {
-        update(instanceName);
+        update(instanceName, true);
       }
     }
   }
