@@ -51,6 +51,6 @@ public class CacheBeforeAdvice implements MethodBeforeAdvice {
   public void before(final Method method, final Object[] args, final Object target) throws Throwable {
     final String instanceName = (String) args[0];
     logger.debug("Updating cache for instance: " + instanceName);
-    revisionObservable.update(instanceName);
+    revisionObservable.update(instanceName, false);
   }
 }
