@@ -78,7 +78,7 @@
     <td>svn/dav</td>
     <td>1.5.0_04</td>
     <td>sventon committer</td>
-    <td>RC3</td>
+    <td>RC4</td>
   </tr>
   <tr>
     <td>WinXP</td>
