@@ -9,6 +9,10 @@ sventon change history
 [724] Added: Feature #2887 - Customizable RSS body.
 [720] Added: Feature #2853 - Warn if repository url is not root.
 
+[782] Release 1.1 RC4 (2007-01-28)
+[779] Fixed: Bug #10132 - Cache does not survive SIGKILL.
+[778] Added: Feature #3069 - Flushing of caches.
+
 [754] Release 1.1 RC3 (2006-12-19)
 [750] Fixed: Bug #9485 - Temp path (creation) error in JBoss.
 [739] Fixed: Bug #9518 - IE cache problem - show files in flatten view.
